template/styles/pdf.css
@import "fonts/inconsolata.css";

html{
  /* Workaround for PhantomJS 2.0 issue, see https://github.com/ariya/phantomjs/issues/12685 */
  transform-origin: 0 0;
  -webkit-transform-origin: 0 0;
  transform: scale(0.75);
  -webkit-transform: scale(0.75);
}

html, body {
  padding: 0;
  margin: 0;
}

body {
  padding: 1cm 4.5cm 1cm 1cm;
  font-family: sans-serif;
}

h1 {
  font-weight: normal;
}

pre, code {
  font-family: 'inconsolataregular'; /* works like this, don't touch! */
}

.hljs-keyword, .hljs-id, .hljs-title, .hljs-built_in, .css .hljs-tag, .hljs-doctag, .smalltalk .hljs-class, .hljs-winutils, .bash .hljs-variable, .pf .hljs-variable, .apache .hljs-tag, .hljs-type, .hljs-typename, .tex .hljs-command, .asciidoc .hljs-strong, .markdown .hljs-strong, .hljs-request, .hljs-status, .tp .hljs-data, .tp .hljs-io {
  font-family: 'inconsolatabold'; /* works like this, don't touch! */
}

.error {
  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 6 3" enable-background="new 0 0 6 3" height="3" width="6"><g fill="red"><polygon points="5.5,0 2.5,3 1.1,3 4.1,0"/><polygon points="4,0 6,2 6,0.6 5.4,0"/><polygon points="0,2 1,3 2.4,3 0,0.6"/></g></svg>') bottom left repeat-x;
  display: inline-block;
  position: relative;
  min-width: 10px!important;
  height: 5px;
}
.warning {
  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 6 3" enable-background="new 0 0 6 3" height="3" width="6"><g fill="orange"><polygon points="5.5,0 2.5,3 1.1,3 4.1,0"/><polygon points="4,0 6,2 6,0.6 5.4,0"/><polygon points="0,2 1,3 2.4,3 0,0.6"/></g></svg>') bottom left repeat-x;
  display: inline-block;
  position: relative;
  min-width: 10px!important;
  height: 5px;
}
svg:not(.correction) {
  border: 1px solid #999;
  overflow: hidden;
  width: 100%;
  padding: 10px;
  clear: both;
  display: block;
}

.node {
  white-space: nowrap;
}

.node rect {
  stroke: #333;
  fill: #fff;
  stroke-width: 1.5px;
}

.cluster rect {
  stroke: #333;
  fill: #000;
  fill-opacity: 0.1;
  stroke-width: 1.5px;
}

.edgePath path.path {
  stroke: #333;
  stroke-width: 1.5px;
  fill: none;
}

canvas {
  display: none;
}

svg.correction {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 42;
}

svg.correction.highlighter {
  stroke-opacity:0.4;
  z-index: 41;
}

